--- a/JsonTest/Base.lproj/Main.storyboard
+++ b/JsonTest/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,66 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JsonTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNM-7g-Qoo">
+                                <rect key="frame" x="152" y="433" width="110" height="30"/>
+                                <state key="normal" title="Jsonを取得する"/>
+                                <connections>
+                                    <action selector="getJson:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V41-Au-ecM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="RNM-7g-Qoo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1oA-BC-IB7"/>
+                            <constraint firstItem="RNM-7g-Qoo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nMa-4B-7RY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="hqz-18-1wN"/>
+                    <connections>
+                        <segue destination="Z0K-ca-emb" kind="show" identifier="goResultVC" id="ykY-m3-YdL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133" y="139"/>
+        </scene>
+        <!--Result View Vontroller-->
+        <scene sceneID="axD-QW-aJ1">
+            <objects>
+                <viewController id="Z0K-ca-emb" customClass="ResultViewVontroller" customModule="JsonTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PDZ-kH-VOr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTo-JP-sHp">
+                                <rect key="frame" x="134" y="366" width="147" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tTo-JP-sHp" firstAttribute="centerX" secondItem="PDZ-kH-VOr" secondAttribute="centerX" id="6Yd-Cx-kAJ"/>
+                            <constraint firstItem="tTo-JP-sHp" firstAttribute="leading" secondItem="gcm-Sk-Chd" secondAttribute="leading" constant="134" id="9h0-X7-Pht"/>
+                            <constraint firstItem="tTo-JP-sHp" firstAttribute="top" secondItem="gcm-Sk-Chd" secondAttribute="top" constant="366" id="eaY-3Z-sHn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gcm-Sk-Chd"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="kwO-D8-O7P"/>
+                    <connections>
+                        <outlet property="resultJson" destination="tTo-JP-sHp" id="N5P-R4-GAf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7p0-rf-7ZG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="934.78260869565224" y="144.64285714285714"/>
         </scene>
     </scenes>
 </document>
