--- a/JsonTest/Base.lproj/Main.storyboard
+++ b/JsonTest/Base.lproj/Main.storyboard
@@ -15,9 +15,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRm-ua-AzE">
+                                <rect key="frame" x="192" y="449" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNM-7g-Qoo">
-                                <rect key="frame" x="152" y="433" width="110" height="30"/>
-                                <state key="normal" title="Jsonを取得する"/>
+                                <rect key="frame" x="149" y="433" width="116" height="30"/>
+                                <state key="normal" title="JSONを取得する"/>
                                 <connections>
                                     <action selector="getJson:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V41-Au-ecM"/>
                                 </connections>
@@ -37,7 +41,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="139"/>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
         <!--Result View Vontroller-->
         <scene sceneID="axD-QW-aJ1">
@@ -47,24 +51,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTo-JP-sHp">
-                                <rect key="frame" x="134" y="366" width="147" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbP-ew-9On">
+                                <rect key="frame" x="134" y="190" width="146" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ランダムに社員ID・社員名を表示" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="REU-OV-SXY">
+                                <rect key="frame" x="86" y="107" width="242" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ID" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pXR-EA-Paw">
+                                <rect key="frame" x="94" y="183" width="45" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="社員名" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SdR-4t-gkd">
+                                <rect key="frame" x="94" y="326" width="71" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYk-GM-pu9">
+                                <rect key="frame" x="158" y="333" width="138" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="tTo-JP-sHp" firstAttribute="centerX" secondItem="PDZ-kH-VOr" secondAttribute="centerX" id="6Yd-Cx-kAJ"/>
-                            <constraint firstItem="tTo-JP-sHp" firstAttribute="leading" secondItem="gcm-Sk-Chd" secondAttribute="leading" constant="134" id="9h0-X7-Pht"/>
-                            <constraint firstItem="tTo-JP-sHp" firstAttribute="top" secondItem="gcm-Sk-Chd" secondAttribute="top" constant="366" id="eaY-3Z-sHn"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gcm-Sk-Chd"/>
                     </view>
                     <navigationItem key="navigationItem" id="kwO-D8-O7P"/>
                     <connections>
-                        <outlet property="resultJson" destination="tTo-JP-sHp" id="N5P-R4-GAf"/>
+                        <outlet property="resultJsonId" destination="gbP-ew-9On" id="A8k-rk-ba2"/>
+                        <outlet property="resultJsonName" destination="KYk-GM-pu9" id="ma5-fk-Fff"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7p0-rf-7ZG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
